--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
 <body>
 
-  <h1>GREAT <span id="colorDisplay" > RGB </span>  COLOR GAME </h1>
+    <h1>GREAT
+        <span id="colorDisplay"> RGB </span> COLOR GAME </h1>
 
-      <div id= "stripe" >
+    <div id="stripe">
         <button id="reset"> New Color </button>
-<span id="message"> </span>
-<button id="easy">Easy</button>
-<button id="hard">Hard</button>
-</div>
+        <span id="message"> </span>
+        <button id="easy">Easy</button>
+        <button id="hard">Hard</button>
+    </div>
 
 
-      <div id="container">
+    <div id="container">
 
         <div class="square"> </div>
 
@@ -33,7 +34,8 @@
 
         <div class="square"></div>
     </div>
-<script type="text/javascript" src = "color.js"> </script>
+    <script type="text/javascript" src="color.js">
+    </script>
 </body>
 
 </html>
